--- a/references.bib
+++ b/references.bib
@@ -8,6 +8,7 @@
   publisher={Ubiquity Press}
 }
 
+
 @article{Julia,
     author = {Jeff Bezanson and Alan Edelman and Stefan Karpinski and Viral B. Shah.},
     title = {{Julia: A Fresh Approach to Numerical Computing.}},
@@ -23,4 +24,18 @@ title = {{Dynamic Survival Analysis: Modelling the Hazard Function via Ordinary 
 year = {2024+},
 journal = {*Statistical Methods in Medical Research*. in press.},
 url = {https://doi.org/10.1177/09622802241268504}
+}
+
+@article{Turing,
+  author    = {Hong Ge and
+               Kai Xu and
+               Zoubin Ghahramani},
+  title     = {Turing: a language for flexible probabilistic inference},
+  booktitle = {International Conference on Artificial Intelligence and Statistics,
+               {AISTATS} 2018, 9-11 April 2018, Playa Blanca, Lanzarote, Canary Islands,
+               Spain},
+  pages     = {1682--1690},
+  year      = {2018},
+  url       = {http://proceedings.mlr.press/v84/ge18b.html},
+  biburl    = {https://dblp.org/rec/bib/conf/aistats/GeXG18},
 }
