--- a/references.bib
+++ b/references.bib
@@ -39,3 +39,12 @@ url = {https://doi.org/10.1177/09622802241268504}
   url       = {http://proceedings.mlr.press/v84/ge18b.html},
   biburl    = {https://dblp.org/rec/bib/conf/aistats/GeXG18},
 }
+
+@article{RMST,
+author = {Belot, A. and Ndiaye, A. and Luque-Fernandez, M. A. and Kipourou, D. K. and Maringe, C. and Rubio, F. J. and Rachet, B.},
+title = {Summarizing and communicating on survival data according to the audience: a tutorial on different measures illustrated with population-based cancer registry data.},
+booktitle = {Clinical epidemiology},
+year = {2019},
+pages = {53–65},
+url = {https://doi.org/10.2147/CLEP.S173523}
+}
